[package]
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
categories = ["embedded", "no-std"]
description = "Example programs for the PCF8574 I/O expander using the STM32F3Discovery board."
keywords = ["pcf857x", "f3", "example"]
license = "MIT OR Apache-2.0"
name = "pcf857x-f3-demo"
version = "0.1.0"

[dependencies]
cortex-m = "0.5"
cortex-m-rt = "0.5"
cortex-m-semihosting = "0.3.0"
panic-semihosting = "0.3.0"
cast = { version = "0.2.0", default-features = false }
stm32f30x = "*"
f3 = "*"
panic-abort = "*"
pcf857x = "0.1"

[profile.release]
codegen-units = 1 # better optimizations
debug = true
lto = true # better optimizations
